fix: root overflow hidden

--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,12 @@ body {
 
 html, body {
   overflow-x: hidden;
-  width: 100%;
+  max-width: 100%;
+}
+
+#root {
+  overflow-x: hidden;
+  max-width: 100%;
 }
 
 .light-bg {
